[package]
name = "cjdns-admin"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns node admin lib & binary"

[dependencies]
anyhow = "1.0"
dirs = "3.0"
hex = "0.4"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "net", "macros", "time"] }

cjdns-bencode = { path = "../cjdns-bencode" }