[package]
name = "cjdns-admin"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns node admin lib & binary"

[dependencies]
anyhow = "1.0"
dirs = "3.0"
hex = "0.4"
rand = "0.7"
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2", default-features = false, features = ["std"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "net", "macros", "time"] }

cjdns-bencode = { path = "../cjdns-bencode" }