[package]
name = "cjdns-ann"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0"
description = "Library for parsing cjdns announcement messages"

[dependencies]
hex = "0.4"
sodiumoxide = "0.2"
libsodium-sys = "0.2"
thiserror = "1.0"

cjdns-core = { path = "../cjdns-core" }
cjdns-keys = { path = "../cjdns-keys" }