[package]
name = "cjdns-core"
version = "0.1.0"
authors = [
    "Eenae <alexey@mixbytes.io>",
    "Boogerwooger <sergey@mixbytes.io>",
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>",
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0"
description = "Inter-crate cjdns types, structs & traits"

[dependencies]
hex = "0.4.2"
lazy_static = "1.4.0"
regex = "1.3.9"
sodiumoxide = "0.2.5"
data-encoding = "2.3.0"

[dev-dependencies.rand]
version = "0.7.3"
features = ["small_rng"]
