[package]
name = "cjdns-crypto"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns crypto library"

[dependencies]

# Don't use original sodiumoxide due to bugs in Windows build
# sodiumoxide = "0.2"
# libsodium-sys = "0.2"

# Use customized sodiumoxide which fixes Windows build bugs
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "3aa7e8e21b9cd61ad64f4a0ed125d5b1af2cf38d", version = "0.2" }
libsodium-sys = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "3aa7e8e21b9cd61ad64f4a0ed125d5b1af2cf38d", version = "0.2" }