[package]
name = "cjdns-crypto"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns crypto library"

[dependencies]

# Don't use original sodiumoxide due to bugs in Windows build
# sodiumoxide = "0.2"
# libsodium-sys = "0.2"

# Use customized sodiumoxide which fixes Windows build bugs
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2" }
libsodium-sys = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2" }