[package]
name = "cjdns-ctrl"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0"
description = "Library for parsing/serializing CTRL messages"

[dependencies]
num_enum = "0.5"

cjdns-bytes = { path = "../cjdns-bytes" }
cjdns-core = { path = "../cjdns-core" }
cjdns-keys = { path = "../cjdns-keys" }
cjdns-hdr = { path = "../cjdns-hdr" }
netchecksum = { path = "../netchecksum" }

[dev-dependencies]
hex = "0.4"
