[package]
name = "cjdns-hdr"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>"
]
edition = "2018"
license = "GPL-3.0"
description = "Library for parsing and serializing cjdns route and data headers"

[dependencies]
thiserror = "1.0"
num_enum = "0.5.1"
cjdns-core = { path = "../cjdns-core", version = "0.1.0" }

[dev-dependencies]
hex = "0.4"
