[package]
name = "cjdns-keys"
version = "0.1.0"
authors = ["Sabaun Taraki <taraki.sabaun.rl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
sodiumoxide = "0.2.5"
hex = "0.4.2"
regex = "1.3.9"
cjdns-entities = { path = "../cjdns-entities" }