[package]
name = "cjdns-keys"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>",
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0"
description = "Library for working with cjdns keys"

[dependencies]
data-encoding = "2.3"
hex = "0.4"
lazy_static = "1.4"
regex = "1.3"
sodiumoxide = "0.2"
thiserror = "1.0"