[package]
name = "cjdns-keys"
version = "0.1.0"
authors = [
    "Sabaun Taraki <taraki.sabaun.rl@gmail.com>",
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Library for working with cjdns keys"

[dependencies]
data-encoding = "2.3"
hex = "0.4"
lazy_static = "1.4"
regex = "1.3"
sodiumoxide = { git = "https://github.com/cjdelisle/sodiumoxide", rev = "9f6a18d40a4db253edfebac9f2ce5c22d09b1f47", version = "0.2", default-features = false, features = ["std"] }
thiserror = "1.0"