[package]
name = "cjdns-sniff"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0"
description = "Tools for dumping and injecting cjdns traffic"

[dependencies]
anyhow = "1.0"
bendy = { git = "https://github.com/CJDNS-Development-Team/bendy-cjdns", tag = "v0.3.2-cjdns", features = ["std", "serde"] } # bencode support
clap = { version = "3.0.0-beta.1", default-features = false, features = [ "std", "derive" ] }
env_logger = "0.7"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

tokio = { version = "0.2", features = ["fs", "macros", "net", "udp", "time", "signal"] }

cjdns-admin = { path = "../cjdns-admin" }
cjdns-bytes = { path = "../cjdns-bytes" }
cjdns-core = { path = "../cjdns-core" } # cjdns-keys only
cjdns-ctrl = { path = "../cjdns-ctrl" }
cjdns-hdr = { path = "../cjdns-hdr" }