[package]
name = "cjdns-sniff"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "Tools for dumping and injecting cjdns traffic"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2", default-features = false, features = [ "std", "derive" ] }
env_logger = "0.7"
hex = "0.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

tokio = { version = "1", features = ["fs", "net", "macros", "time", "sync", "rt-multi-thread", "signal"] }

cjdns-admin = { path = "../cjdns-admin" }
cjdns-bencode = { path = "../cjdns-bencode" }
cjdns-bytes = { path = "../cjdns-bytes" }
cjdns-keys = { path = "../cjdns-keys" }
cjdns-ctrl = { path = "../cjdns-ctrl" }
cjdns-hdr = { path = "../cjdns-hdr" }
