[package]
name = "cjdns-snode"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns supernode"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.1", default-features = false, features = [ "std", "derive" ] }
env_logger = "0.7"
lazy_static = "1.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
regex = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["fs", "net", "macros", "time"] }

cjdns-core = { path = "../cjdns-core" }
cjdns-keys = { path = "../cjdns-keys" }