[package]
name = "cjdns-snode"
version = "0.1.0"
authors = [
    "Alex Kordys <a.kordys@mixbytes.io>"
]
edition = "2018"
license = "GPL-3.0-or-later"
description = "cjdns supernode"

[dependencies]
anyhow = "1.0"
clap = { version = "3.0.0-beta.1", default-features = false, features = [ "std", "derive" ] }
env_logger = "0.7"
futures = "0.3"
hex = "0.4"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
parking_lot = "0.11"
regex = "1.3"
rmpv = "0.4" # msgpack encoding
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["fs", "net", "macros", "time", "sync"] }
tokio-tungstenite = "0.11"
warp = "0.2"

cjdns-core = { path = "../cjdns-core" }
cjdns-keys = { path = "../cjdns-keys" }
cjdns-ann = { path = "../cjdns-ann" }
cjdns-hdr = { path = "../cjdns-hdr" }
cjdns-admin = { path = "../cjdns-admin" }
cjdns-sniff = { path = "../cjdns-sniff" }
cjdns-bytes = { path = "../cjdns-bytes" }
cjdns-bencode = { path = "../cjdns-bencode" }
cjdns-crypto = { path = "../cjdns-crypto" }

[dev-dependencies]
chrono = "0.4"